--- a/src/01-accordion.html
+++ b/src/01-accordion.html
@@ -3,10 +3,124 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
+    <title>Accordion Component</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <div class="accordion">
+      <div class="item">
+        <p class="number">01</p>
+        <p class="text">Where are these chairs assembled?</p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="icon"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="m19.5 8.25-7.5 7.5-7.5-7.5"
+          />
+        </svg>
+        <div class="hidden-box">
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis
+            temporibus qui iusto rem dolorum quos accusantium incidunt vitae.
+            Commodi earum repellendus cumque accusamus laboriosam magnam optio
+            deserunt temporibus, dicta laudantium.
+          </p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li>Itaque optio iusto ipsam!</li>
+            <li>Cumque enim voluptas dolores!</li>
+            <li>
+              Incidunt error ut reiciendis laudantium, iure architecto nostrum
+              sed corporis. Voluptatum amet necessitatibus nesciunt!
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="item open">
+        <p class="number">02</p>
+        <p class="text">How long do I have to return my chair?</p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="icon"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="m19.5 8.25-7.5 7.5-7.5-7.5"
+          />
+        </svg>
+        <div class="hidden-box">
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis
+            temporibus qui iusto rem dolorum quos accusantium incidunt vitae.
+            Commodi earum repellendus cumque accusamus laboriosam magnam optio
+            deserunt temporibus, dicta laudantium.
+          </p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li>Itaque optio iusto ipsam!</li>
+            <li>Cumque enim voluptas dolores!</li>
+            <li>
+              Incidunt error ut reiciendis laudantium, iure architecto nostrum
+              sed corporis. Voluptatum amet necessitatibus nesciunt!
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="item">
+        <p class="number">03</p>
+        <p class="text">Do you ship to countries outside EU?</p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="icon"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="m19.5 8.25-7.5 7.5-7.5-7.5"
+          />
+        </svg>
+        <div class="hidden-box">
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis
+            temporibus qui iusto rem dolorum quos accusantium incidunt vitae.
+            Commodi earum repellendus cumque accusamus laboriosam magnam optio
+            deserunt temporibus, dicta laudantium.
+          </p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li>Itaque optio iusto ipsam!</li>
+            <li>Cumque enim voluptas dolores!</li>
+            <li>
+              Incidunt error ut reiciendis laudantium, iure architecto nostrum
+              sed corporis. Voluptatum amet necessitatibus nesciunt!
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
