--- a/src/02-carousel.html
+++ b/src/02-carousel.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Accordion Component</title>
+    <title>Caurosel Component</title>
   </head>
   <body>
     <div class="carousel">
